# nequip-multihead

./: LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
configs/: delta_learning.yaml  minimal_multihead.yaml
docs/: conf.py  ema_checkpoint_bug.md  getting_started.md  index.rst  integration_test_status.md  requirements.txt
docs/api/: api.rst  callbacks.rst  data.rst  model.rst  nn.rst  transforms.rst
docs/explanation/: architecture.md  explanation.rst
docs/guide/: callbacks.md  compilation.md  configuration.md  delta_learning.md  deployment.md  gotchas.md  guide.rst  loss_scheduling.md  per_head_lmax.md  testing.md  troubleshooting.md
docs/intro/: intro.md
nequip_multihead/: __init__.py  _keys.py
nequip_multihead/data/: __init__.py  stats_manager.py
nequip_multihead/model/: __init__.py  extract_head.py  multihead_allegro_models.py  multihead_models.py
nequip_multihead/nn/: __init__.py  multihead_edge_readout.py  multihead_readout.py  per_head_convnetlayer.py
nequip_multihead/transforms/: __init__.py  head_stamper.py
tests/: run_allegro_multihead_test.sh  run_arch_matrix_test.sh  run_full_pipeline_test.sh  run_scheduler_compile_test.sh  run_swa_averaging_test.sh  run_swa_e2e_test.sh  run_swa_test.sh  test_4layer_per_head_lmax.yaml  test_5head_scheduler_compile.yaml  test_allegro_multihead.py  test_allegro_multihead.yaml  test_arch_matrix.py  test_freeze_layers.py  test_freeze_layers.yaml  test_full_pipeline.py  test_scheduler_compile.yaml  test_swa.yaml  test_swa_averaging_correctness.py  test_swa_e2e.py  test_swa_e2e.yaml
(+4 files in other folders)
