[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nequip-multihead"
version = "0.1.0"
description = "Multi-head training extension for NequIP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "nequip>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.entry-points."nequip.extension"]
init_always = "nequip_multihead"

[tool.setuptools.packages.find]
include = ["nequip_multihead*"]
